pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: project-container
        image: narland/java:latest
        volumeMounts:
        - name: config-volume      
          mountPath: /etc/config
        - name: secret-volume      
          mountPath: /etc/secret
      volumes:
      - name: config-volume
        configMap:
          name: configmap-project   
      - name: secret-volume
        secret:
          secretName: secret-project
