ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  - host: project-local-egor.local
    http:
      paths:
      - path: /revision
        pathType: Prefix
        backend:
          service:
            name: my-app-service
            port:
              number: 8080
